--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container pb-4 pt-1" >
       <div class="row align-items-center">
           <div class="col-6">
-            <p class="mb-0" style="font-size: 14px;">Copyright © <script>document.write(new Date().getFullYear())</script> Dahab Rostom</p>
+            <p class="mb-0" style="font-size: 14px;">Copyright © <script>document.write(new Date().getFullYear())</script> D&R</p>
           </div>
       </div>
     </div>
