--- a/contact.html
+++ b/contact.html
@@ -132,6 +132,7 @@
             <ul class="custom-list d-block mb-4" >
               <li><p><i class="bi bi-geo-alt-fill me-2"></i>Egypt, Ismailia</p></li>
               <li class="mb-1" ><a href="tel:+01289134671"><i class="bi bi-telephone-fill me-2"></i>01289134671</a></li>
+              <li class="mb-1" ><a href="tel:+01557343172"><i class="bi bi-telephone-fill me-2"></i>01557343172</a></li>
               <li class="mb-1" ><a href="mailto:rentapartment669@gmail.com"><i class="bi bi-envelope-fill me-2"></i>rentapartment669@gmail.com</a></li>
             </ul>
             <ul class=" custom-list social" >
