--- a/about.html
+++ b/about.html
@@ -117,6 +117,8 @@
                   <h4 class="mb-3">Ahmed Ezz Eldeen</h4>
                   <p>Ahmed he is Happy for help you</p>
                   <p class="pt-3 mb-0 border-top"><a href="https://wa.me/+2001557343172"><i class="bi bi-whatsapp me-2"></i>01557343172</a></p>
+                  <p class="pt-3 mb-0 border-top"><a href="tel:+01289134671"><i class="bi bi-telephone-fill me-2"><i class="bi bi-whatsapp me-2"></i>01289134671</a></p>
+
                 </div>
               </div>
             </div>
@@ -147,6 +149,7 @@
             <ul class="custom-list d-block mb-4" >
               <li><p><i class="bi bi-geo-alt-fill me-2"></i>Egypt, Ismailia</p></li>
               <li class="mb-1" ><a href="tel:+01289134671"><i class="bi bi-telephone-fill me-2"></i>01289134671</a></li>
+              <li class="mb-1" ><a href="tel:+01557343172"><i class="bi bi-telephone-fill me-2"></i>01557343172</a></li>
               <li class="mb-1" ><a href="mailto:rentapartment669@gmail.com"><i class="bi bi-envelope-fill me-2"></i>rentapartment669@gmail.com</a></li>
             </ul>
             <ul class=" custom-list social" >
