--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                   <h4 class="mb-3">Ahmed Ezz Eldeen</h4>
                   <p>Ahmed he is Happy for help you</p>
                   <p class="pt-3 mb-0 border-top"><a href="https://wa.me/+2001557343172"><i class="bi bi-whatsapp me-2"></i>01557343172</a></p>
-                  <p class="pt-3 mb-0 border-top"><a href="tel:+01289134671"><i class="bi bi-telephone-fill me-2"><i class="bi bi-whatsapp me-2"></i>01289134671</a></p>
+                  <p class="pt-3 mb-0 border-top"><a href="tel:+01289134671"><i class="bi bi-telephone-fill me-2"></i>01289134671</a></p>
 
                 </div>
               </div>
