--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
         </div>
         <div class="col-lg-6" >
           <div class="mainCard m-lg-0 mainCard--light shadow-lg">
-            <form action="mailto:dahabrostom4@gmail" method="GET" class="form" >
+            <form action="mailto:rentapartment669@gmail.com" method="GET" class="form" >
               <div class="row justify-content-center">
                 <div class="col-12"><h4 class="mb-4">Send us your request and all the details you prefer</h4></div>
                 <div class="col-md-6 mb-4">
