--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
           </div>
           <div class="col-lg-6">
             <div class="p-3">
-              <h2 class="mb-4 mt-3">Rent Apartment</h2>
+              <h2 class="mb-4 mt-3">Rent Apartment Since 2021</h2>
               <p> You will find the best service and you can request the specifications you need <a href="#">Rent Apartment</a>.</p>
               <a href="contact.html" class="btn main-btn main-btn--scroll me-3 scrollTo" data-target="service">
                 <span>Get in touch</span>
